* Fixed vertical spacing on homepage for smaller screens * updated resume to include new stuff * added some structured markup * added accomplishments to resume
updated text around os revisions

--- a/source/_includes/aarone.css
+++ b/source/_includes/aarone.css
@@ -50,7 +50,7 @@ section ul {
   padding-right: 0;
 }
 
-@media screen and (max-height: 600px) {
+@media screen and (max-height: 700px) {
   #page {
     padding-top: 10%;
   }
